--- a/KLS_API/KLS_API/KLS_API.csproj
+++ b/KLS_API/KLS_API/KLS_API.csproj
@@ -9,6 +9,10 @@
     <Compile Remove="Migrations\20210617203522_RegionUps.Designer.cs" />
     <Compile Remove="Migrations\20210617204237_InitialOne.cs" />
     <Compile Remove="Migrations\20210617204237_InitialOne.Designer.cs" />
+    <Compile Remove="Migrations\20210622173757_Initial22.cs" />
+    <Compile Remove="Migrations\20210622173757_Initial22.Designer.cs" />
+    <Compile Remove="Migrations\20210623010345_Transportistas1.cs" />
+    <Compile Remove="Migrations\20210623010345_Transportistas1.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
