--- a/.gitignore
+++ b/.gitignore
@@ -2315,3 +2315,76 @@ KLS_WEB/KLS_WEB/obj/Release/netcoreapp3.1/Razor/Views/Travels/New.cshtml.g.cs
 KLS_WEB/KLS_WEB/obj/Release/netcoreapp3.1/staticwebassets/KLS_WEB.StaticWebAssets.Manifest.cache
 KLS_WEB/KLS_WEB/obj/Release/netcoreapp3.1/staticwebassets/KLS_WEB.StaticWebAssets.xml
 *.dll
+KLS_API/.vs/KLS_API/config/applicationhost.config
+KLS_API/.vs/KLS_API/DesignTimeBuild/.dtbcache.v2
+KLS_API/.vs/KLS_API/v16/.suo
+KLS_API/KLS_API/bin/Debug/netcoreapp3.1/KLS_API.dll
+KLS_API/KLS_API/bin/Debug/netcoreapp3.1/KLS_API.pdb
+KLS_API/KLS_API/bin/Debug/netcoreapp3.1/KLS_API.runtimeconfig.dev.json
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.assets.cache
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.csproj.AssemblyReference.cache
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.csproj.FileListAbsolute.txt
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.dll
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.genruntimeconfig.cache
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.pdb
+KLS_WEB/.vs/KLS_WEB/DesignTimeBuild/.dtbcache.v2
+KLS_WEB/.vs/KLS_WEB/v16/.suo
+KLS_WEB/KLS_WEB/bin/Debug/netcoreapp3.1/KLS_WEB.dll
+KLS_WEB/KLS_WEB/bin/Debug/netcoreapp3.1/KLS_WEB.pdb
+KLS_WEB/KLS_WEB/bin/Debug/netcoreapp3.1/KLS_WEB.runtimeconfig.dev.json
+KLS_WEB/KLS_WEB/bin/Debug/netcoreapp3.1/KLS_WEB.Views.dll
+KLS_WEB/KLS_WEB/bin/Debug/netcoreapp3.1/KLS_WEB.Views.pdb
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.assets.cache
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.csproj.AssemblyReference.cache
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.csproj.FileListAbsolute.txt
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.dll
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.genruntimeconfig.cache
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.MvcApplicationPartsAssemblyInfo.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.pdb
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.Views.dll
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.Views.pdb
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/_ViewImports.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/_ViewStart.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Box/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Certifications/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Contacts/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/formCarriers.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Inventory/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Library/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Operators/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Routes/formRoutes.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Carriers/Routes/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Airlines/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Catalogs/GeografiaViews.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Catalogs/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/City/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Coloaders/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Colonies/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Country/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/CustomsBrokers/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/InternationalLand/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Regions/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/ShippingCompanies/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/State/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/Subservices/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Catalogs/TypesOfUnits/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Customers/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Home/Privacy.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Login/AccessDenied.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Login/Login.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Route/_AddEdit.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Route/_Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Route/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Security/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Shared/_Layout.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Shared/_ValidationScriptsPartial.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Shared/Error.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Travels/Details.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Travels/Index.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Travels/New.cshtml.g.cs
+KLS_WEB/KLS_WEB/obj/KLS_WEB.csproj.nuget.dgspec.json
+KLS_WEB/KLS_WEB/obj/KLS_WEB.csproj.nuget.g.props
+KLS_WEB/KLS_WEB/obj/project.assets.json
+KLS_WEB/KLS_WEB/obj/project.nuget.cache
