--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+KLS_API/.vs/KLS_API/v16/.suo
+        KLS_WEB/.vs/KLS_WEB/v16/.suo
 KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.csprojAssemblyReference.cache
 KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.csprojAssemblyReference.cache
 
