--- a/KLS_API/KLS_API/KLS_API.csproj
+++ b/KLS_API/KLS_API/KLS_API.csproj
@@ -6,6 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210628174144_initial.cs" />
+    <Compile Remove="Migrations\20210628174144_initial.Designer.cs" />
+    <Compile Remove="Migrations\20210628174305_initial1.cs" />
+    <Compile Remove="Migrations\20210628174305_initial1.Designer.cs" />
+    <Compile Remove="Migrations\20210629204425_trhasruta.cs" />
+    <Compile Remove="Migrations\20210629204425_trhasruta.Designer.cs" />
+    <Compile Remove="Migrations\20210629214955_rutaCarier.cs" />
+    <Compile Remove="Migrations\20210629214955_rutaCarier.Designer.cs" />
+    <Compile Remove="Migrations\20210629215240_rutasupdate.cs" />
+    <Compile Remove="Migrations\20210629215240_rutasupdate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
@@ -14,6 +27,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 
