--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,25 @@ KLS_API/KLS_API/obj/project.assets.json
 KLS_API/KLS_API/obj/project.nuget.cache
 KLS_WEB/.vs/KLS_WEB/DesignTimeBuild/.dtbcache.v2
 KLS_WEB/.vs/KLS_WEB/v16/.suo
+KLS_API/.vs/KLS_API/DesignTimeBuild/.dtbcache.v2
+KLS_API/.vs/KLS_API/DesignTimeBuild/.dtbcache.v2
+KLS_API/.vs/KLS_API/v16/.suo
+KLS_API/KLS_API/bin/Debug/netcoreapp3.1/KLS_API.dll
+KLS_API/KLS_API/bin/Debug/netcoreapp3.1/KLS_API.pdb
+*.dll
+*.pdb
+KLS_API/KLS_API/bin/Debug/netcoreapp3.1/KLS_API.dll
+KLS_API/KLS_API/bin/Debug/netcoreapp3.1/KLS_API.pdb
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.csproj.CoreCompileInputs.cache
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.csprojAssemblyReference.cache
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.dll
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.pdb
+KLS_API/KLS_API/obj/KLS_API.csproj.nuget.dgspec.json
+KLS_API/KLS_API/obj/KLS_API.csproj.nuget.g.props
+KLS_API/KLS_API/obj/project.assets.json
+KLS_API/KLS_API/obj/project.nuget.cache
+KLS_WEB/.vs/KLS_WEB/v16/.suo
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.csprojAssemblyReference.cache
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.dll
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.pdb
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.Views.dll
