--- a/KLS_API/KLS_API/KLS_API.csproj
+++ b/KLS_API/KLS_API/KLS_API.csproj
@@ -16,6 +16,8 @@
     <Compile Remove="Migrations\20210629214955_rutaCarier.Designer.cs" />
     <Compile Remove="Migrations\20210629215240_rutasupdate.cs" />
     <Compile Remove="Migrations\20210629215240_rutasupdate.Designer.cs" />
+    <Compile Remove="Migrations\20210630162840_trinventario.cs" />
+    <Compile Remove="Migrations\20210630162840_trinventario.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,10 +29,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 
