--- a/.gitignore
+++ b/.gitignore
@@ -515,3 +515,4 @@ KLS_WEB/KLS_WEB/obj/KLS_WEB.csproj.nuget.dgspec.json
 KLS_WEB/KLS_WEB/obj/KLS_WEB.csproj.nuget.g.props
 KLS_WEB/KLS_WEB/obj/project.assets.json
 KLS_WEB/KLS_WEB/obj/project.nuget.cache
+KLS_API/KLS_API/obj/Debug/netcoreapp3.1/KLS_API.csprojAssemblyReference.cache
