--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 
 KLS_WEB/.vs/KLS_WEB/v16/.suo
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.Views.dll
+KLS_WEB/.vs/KLS_WEB/v16/.suo
+KLS_WEB/KLS_WEB/bin/Debug/netcoreapp3.1/KLS_WEB.Views.dll
+KLS_WEB/KLS_WEB/bin/Debug/netcoreapp3.1/KLS_WEB.Views.pdb
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.Views.dll
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/KLS_WEB.Views.pdb
+KLS_WEB/KLS_WEB/obj/Debug/netcoreapp3.1/Razor/Views/Shared/_Layout.cshtml.g.cs
