--- a/KLS_WEB/KLS_WEB/appsettings.json
+++ b/KLS_WEB/KLS_WEB/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "Api": {
-    //"Url": "https://localhost:44345/"
-    "Url": "http://3.227.133.22:3001/KLSAPI/"
+    "Url": "https://localhost:44345/"
+    //"Url": "http://3.227.133.22:3001/KLSAPI/"
   }
 }
