--- a/KLS_API/KLS_API/KLS_API.csproj
+++ b/KLS_API/KLS_API/KLS_API.csproj
@@ -20,6 +20,8 @@
     <Compile Remove="Migrations\20210629215240_rutasupdate.Designer.cs" />
     <Compile Remove="Migrations\20210630162840_trinventario.cs" />
     <Compile Remove="Migrations\20210630162840_trinventario.Designer.cs" />
+    <Compile Remove="Migrations\20210702192717_initialQA.cs" />
+    <Compile Remove="Migrations\20210702192717_initialQA.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +34,8 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.0" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 
 </Project>
