--- a/KLS_API/KLS_API/appsettings.json
+++ b/KLS_API/KLS_API/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Server=mysql-dq.consiss.com;Database=kls_qa; Uid=admin;Pwd=*Consiss$2021;"
+    //"ConnectionString": "Server=mysql-dq.consiss.com;Database=kls_qa; Uid=admin;Pwd=*Consiss$2021;"
     //"ConnectionString": "Server=localhost;Database=KLS_DEV; Uid=root;Pwd='';" 
+    "ConnectionString": "Server=localhost;Database=KLS_DEV; Uid=root;Pwd='123456';" 
+
   },
   "Logging": {
     "LogLevel": {
