--- a/.gitignore
+++ b/.gitignore
@@ -453,3 +453,4 @@ $RECYCLE.BIN/
 !.vscode/launch.json
 !.vscode/extensions.json
 KLS_API/KLS_API/appsettings.json
+KLS_API/KLS_API/appsettings.json
