* Nuevo viaje -> Tipos de equipo in progress

--- a/.gitignore
+++ b/.gitignore
@@ -454,3 +454,4 @@ $RECYCLE.BIN/
 !.vscode/extensions.json
 KLS_API/KLS_API/appsettings.json
 KLS_API/KLS_API/appsettings.json
+/KLS_WEB/KLS_WEB/wwwroot/Resources/Inventario
