--- a/KLS_API/KLS_API/KLS_API.csproj
+++ b/KLS_API/KLS_API/KLS_API.csproj
@@ -42,6 +42,10 @@
     <Compile Remove="Migrations\20210705165551_viajes.Designer.cs" />
     <Compile Remove="Migrations\20210705173038_viajes.cs" />
     <Compile Remove="Migrations\20210705173038_viajes.Designer.cs" />
+    <Compile Remove="Migrations\20210706164426_tr_has_operadores_rutas.cs" />
+    <Compile Remove="Migrations\20210706164426_tr_has_operadores_rutas.Designer.cs" />
+    <Compile Remove="Migrations\20210706213434_Viajes-Folio.cs" />
+    <Compile Remove="Migrations\20210706213434_Viajes-Folio.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
