--- a/KLS_API/KLS_API/appsettings.json
+++ b/KLS_API/KLS_API/appsettings.json
@@ -3,7 +3,7 @@
     //"ConnectionString": "Server=mysql-dq.consiss.com;Database=kls_qa; Uid=admin;Pwd=*Consiss$2021;",
     //"ConnectionString": "Server=mysql-dq.consiss.com;Database=kls_prod; Uid=admin;Pwd=*Consiss$2021;",
     //"ConnectionString": "Server=localhost;Database=kls_dev; Uid=root;Pwd='1234';"
-    "ConnectionString": "Server=localhost;Database=kls_dev; Uid=root;Pwd='1234';"
+    "ConnectionString": "Server=localhost;Database=kls_dev; Uid=root;Pwd='';"
   },
   "Logging": {
     "LogLevel": {
