--- a/KLS_API/KLS_API/KLS_API.csproj
+++ b/KLS_API/KLS_API/KLS_API.csproj
@@ -52,6 +52,26 @@
     <Compile Remove="Migrations\20210706220337_viaje.Designer.cs" />
     <Compile Remove="Migrations\20210706220732_viaje.cs" />
     <Compile Remove="Migrations\20210706220732_viaje.Designer.cs" />
+    <Compile Remove="Migrations\20210706224231_viaje.cs" />
+    <Compile Remove="Migrations\20210706224231_viaje.Designer.cs" />
+    <Compile Remove="Migrations\20210707141253_viaje.cs" />
+    <Compile Remove="Migrations\20210707141253_viaje.Designer.cs" />
+    <Compile Remove="Migrations\20210707143157_viaje.cs" />
+    <Compile Remove="Migrations\20210707143157_viaje.Designer.cs" />
+    <Compile Remove="Migrations\20210707145034_viajes.cs" />
+    <Compile Remove="Migrations\20210707145034_viajes.Designer.cs" />
+    <Compile Remove="Migrations\20210707150406_viajes.cs" />
+    <Compile Remove="Migrations\20210707150406_viajes.Designer.cs" />
+    <Compile Remove="Migrations\20210707151153_viajes.cs" />
+    <Compile Remove="Migrations\20210707151153_viajes.Designer.cs" />
+    <Compile Remove="Migrations\20210707151439_travel.cs" />
+    <Compile Remove="Migrations\20210707151439_travel.Designer.cs" />
+    <Compile Remove="Migrations\20210707152315_viajes.cs" />
+    <Compile Remove="Migrations\20210707152315_viajes.Designer.cs" />
+    <Compile Remove="Migrations\20210707152400_viajes.cs" />
+    <Compile Remove="Migrations\20210707152400_viajes.Designer.cs" />
+    <Compile Remove="Migrations\20210707152416_travel.cs" />
+    <Compile Remove="Migrations\20210707152416_travel.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
