--- a/KLS_API/KLS_API/KLS_API.csproj
+++ b/KLS_API/KLS_API/KLS_API.csproj
@@ -46,6 +46,14 @@
     <Compile Remove="Migrations\20210706215724_tr_has_bibliotecaDef.Designer.cs" />
     <Compile Remove="Migrations\20210706215751_tr_has_bibliotecaD.cs" />
     <Compile Remove="Migrations\20210706215751_tr_has_bibliotecaD.Designer.cs" />
+    <Compile Remove="Migrations\20210707235305_routesClientes.cs" />
+    <Compile Remove="Migrations\20210707235305_routesClientes.Designer.cs" />
+    <Compile Remove="Migrations\20210707235345_routesClientes.cs" />
+    <Compile Remove="Migrations\20210707235345_routesClientes.Designer.cs" />
+    <Compile Remove="Migrations\20210708001842_routesClientesId.cs" />
+    <Compile Remove="Migrations\20210708001842_routesClientesId.Designer.cs" />
+    <Compile Remove="Migrations\20210708001933_routesClientesIds.cs" />
+    <Compile Remove="Migrations\20210708001933_routesClientesIds.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
