--- a/.gitignore
+++ b/.gitignore
@@ -455,3 +455,8 @@ $RECYCLE.BIN/
 KLS_API/KLS_API/appsettings.json
 KLS_API/KLS_API/appsettings.json
 /KLS_WEB/KLS_WEB/wwwroot/Resources/Inventario
+KLS_API/KLS_API/appsettings.json
+KLS_WEB/KLS_WEB/wwwroot/Resources/Facturas/2021/07/08/CARTA PORTE KLS 015694 (5).pdf
+KLS_WEB/KLS_WEB/wwwroot/Resources/Facturas/2021/07/08/CARTA PORTE KLS 015694.pdf
+KLS_WEB/KLS_WEB/wwwroot/Resources/Facturas/2021/07/08/rtvjb5nowrz31.jpg
+KLS_API/KLS_API/appsettings.json
