--- a/KLS_WEB/KLS_WEB/KLS_WEB.csproj
+++ b/KLS_WEB/KLS_WEB/KLS_WEB.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Catalogs\**" />
+    <Content Remove="Models\Catalogs\**" />
+    <EmbeddedResource Remove="Models\Catalogs\**" />
+    <None Remove="Models\Catalogs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Core" Version="1.15.0" />
     <PackageReference Include="DotNetZip" Version="1.15.0" />
     <PackageReference Include="FileHelpers" Version="3.5.0" />
@@ -26,7 +33,6 @@
     <Folder Include="Controllers\Catalogs\TypesOfUnits\" />
     <Folder Include="Controllers\Catalogs\Subservices\" />
     <Folder Include="Controllers\Catalogs\ShippingCompanies\" />
-    <Folder Include="Models\Catalogs\" />
     <Folder Include="wwwroot\Resources\Facturas\" />
   </ItemGroup>
 
