Colonias,box,contacts

--- a/KLS_WEB/KLS_WEB/appsettings.json
+++ b/KLS_WEB/KLS_WEB/appsettings.json
@@ -11,8 +11,8 @@
   },
   "AllowedHosts": "*",
   "Api": {
-    //"Url": "https://localhost:44345/"
-    "Url": "http://3.227.133.22:3001/kLSAPI/"
+    "Url": "https://localhost:44345/"
+    //"Url": "http://3.227.133.22:3001/kLSAPI/"
     //"Url": "http://3.227.133.22:3002/KLSAPIPROD/"
   }
 }
