--- a/KLS_WEB/KLS_WEB/KLS_WEB.csproj
+++ b/KLS_WEB/KLS_WEB/KLS_WEB.csproj
@@ -39,6 +39,10 @@
     <Folder Include="wwwroot\Resources\Facturas\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
